--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "generate": "next build && next export"
+    "generate": "next build && next export",
+    "lint": "next lint"
   },
   "dependencies": {
     "@types/node": "20.2.3",
